--- a/frontEnd/css/candidate.css
+++ b/frontEnd/css/candidate.css
@@ -13,3 +13,23 @@
     float: right;
     cursor: pointer;
 }
+
+.form-card {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border: 2px solid black;
+    z-index: 1000;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    line-height: 25%;
+}
